--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,4 +16,47 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
  @import "main";
- 
+ @import "ionicons.min";
+ @import "animate";
+ @import "owl.carousel";
+ @import "owl.theme";
+ @import "responsive";
+ @import "jquery.fancybox";
+ @import "slider";
+
+figure .blog-link {
+  left: 30%;
+}
+
+.homepage-header {
+  font-weight: 400;
+  color: #01A4BA;
+}
+
+.homepage-subtitle {
+  color: #000;
+  font-size: 18px;
+  text-transform: none !important;
+  text-align: center;
+  margin-bottom: 20px;
+  margin: 0px 0px 15px;
+  font-weight: 400;
+}
+
+.navbar-brand h1 {
+  margin-top: 0;
+}
+
+#menu ul {
+  list-style: none;
+  padding: 0px;
+  li {
+    float: left;
+    margin-right: 10px;
+    a {
+      display: block;
+      padding: 5px 10px;
+      text-decoration: none;
+    }
+  }
+}
