--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,147 +1,87 @@
+<section id="hero-area" >
+  <div class="container">
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <div class="block wow fadeInUp" data-wow-delay=".3s">
+
+                <!-- Slider -->
+                <section class="cd-intro">
+                    <h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=".4s" >
+                    <span>Our mission is to enhance the performance <br>of individuals and their organizations. </span><br>
+                    </h1>
+                    </section> <!-- cd-intro -->
+                    <!-- /.slider -->
+                    <h2 class="wow fadeInUp animated" data-wow-delay=".6s" >
+                      At Sharing Wisdom, we leverage over 40 year's experience in business and education<br> to help individuals and organiations achieve their goals.
+
+                    </h2>
+                    <a class="btn-lines dark light wow fadeInUp animated smooth-scroll btn btn-default btn-green" data-wow-delay=".9s" href="#works" data-section="#works" >View Works</a>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section><!--/#main-slider-->
 <section id="works" class="works">
   <div class="container">
      <div class="section-heading">
-         <h1 class="title wow fadeInDown" data-wow-delay=".3s">Latest Works</h1>
-         <p class="wow fadeInDown" data-wow-delay=".5s">
-             Aliquam lobortis. Maecenas vestibulum mollis diam. Pellentesque auctor neque nec urna. Nulla sit amet est. Aenean posuere <br> tortor sed cursus feugiat, nunc augue blandit nunc, eu sollicitudin urna dolor sagittis lacus.
-         </p>
+         <h1 class="title wow fadeInDown homepage-header" data-wow-delay=".3s"><%= raw @page.content_for(:body) %></h1>
      </div>
      <div class="row">
          <div class="col-sm-4 col-xs-12">
              <figure class="wow fadeInLeft animated portfolio-item" data-wow-duration="500ms" data-wow-delay="0ms">
                  <div class="img-wrapper">
-                     <img src="images/portfolio/item-1.jpg" class="img-responsive" alt="this is a title" >
+                     <%= image_tag "business-meeting.jpg", class: "img-responsive" %>
                      <div class="overlay">
                          <div class="buttons">
-                             <a rel="gallery" class="fancybox" href="images/portfolio/item-1.jpg">Demo</a>
-                             <a target="_blank" href="single-portfolio.html">Details</a>
+                           <a href="#">Learn About Us</a>
                          </div>
                      </div>
                  </div>
                  <figcaption>
                  <h4>
                  <a href="#">
-                     Dew Drop
+                     Our Story
                  </a>
                  </h4>
-                 <p>
-                     Redesigne UI Concept
-                 </p>
                  </figcaption>
              </figure>
          </div>
          <div class="col-sm-4 col-xs-12">
              <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms">
                  <div class="img-wrapper">
-                     <img src="images/portfolio/item-2.jpg" class="img-responsive" alt="this is a title" >
+                     <%= image_tag "blog-homepage.jpg", class:"img-responsive" %>
                      <div class="overlay">
-                         <div class="buttons">
-                             <a rel="gallery" class="fancybox" href="images/portfolio/item-2.jpg">Demo</a>
-                             <a target="_blank" href="single-portfolio.html">Details</a>
+                         <div class="buttons blog-link">
+                             <a href="/blog">Read Our Blog</a>
                          </div>
                      </div>
                  </div>
                  <figcaption>
                  <h4>
                  <a href="#">
-                     Bottle Mockup
+                     Blog
                  </a>
                  </h4>
-                 <p>
-                     Lorem ipsum dolor sit.
-                 </p>
                  </figcaption>
              </figure>
          </div>
          <div class="col-sm-4 col-xs-12">
              <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="300ms">
                  <div class="img-wrapper">
-                     <img src="images/portfolio/item-3.jpg" class="img-responsive" alt="" >
+                     <%= image_tag "about-company.jpg", class:"img-responsive" %>
                      <div class="overlay">
-                         <div class="buttons">
-                             <a rel="gallery" class="fancybox" href="images/portfolio/item-3.jpg">Demo</a>
-                             <a target="_blank" href="single-portfolio.html">Details</a>
+                         <div class="buttons blog-link">
+                             <a href="#">View Our Partners</a>
                          </div>
                      </div>
                  </div>
                  <figcaption>
                  <h4>
                  <a href="#">
-                     Table Design
+                     Partners
                  </a>
                  </h4>
-                 <p>
-                     Lorem ipsum dolor sit amet.
-                 </p>
-                 </figcaption>
-             </figure>
-         </div>
-         <div class="col-sm-4 col-xs-12">
-             <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="600ms">
-                 <div class="img-wrapper">
-                     <img src="images/portfolio/item-4.jpg" class="img-responsive" alt="" >
-                     <div class="overlay">
-                         <div class="buttons">
-                             <a rel="gallery" class="fancybox" href="images/portfolio/item-4.jpg">Demo</a>
-                             <a target="_blank" href="single-portfolio.html">Details</a>
-                         </div>
-                     </div>
-                 </div>
-                 <figcaption>
-                 <h4>
-                 <a href="#">
-                     Make Up elements
-                 </a>
-                 </h4>
-                 <p>
-                     Lorem ipsum dolor.
-                 </p>
-                 </figcaption>
-             </figure>
-         </div>
-         <div class="col-sm-4 col-xs-12">
-             <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="900ms">
-                 <div class="img-wrapper">
-                     <img src="images/portfolio/item-5.jpg" class="img-responsive" alt="" >
-                     <div class="overlay">
-                         <div class="buttons">
-                             <a rel="gallery" class="fancybox" href="images/portfolio/item-5.jpg">Demo</a>
-                             <a target="_blank" href="single-portfolio.html">Details</a>
-                         </div>
-                     </div>
-                 </div>
-                 <figcaption>
-                 <h4>
-                 <a href="#">
-                     Shoping Bag Concept
-                 </a>
-                 </h4>
-                 <p>
-                     Lorem ipsum dolor.
-                 </p>
-                 </figcaption>
-             </figure>
-         </div>
-         <div class="col-sm-4 col-xs-12">
-             <figure class="wow fadeInLeft animated" data-wow-duration="500ms" data-wow-delay="1200ms">
-                 <div class="img-wrapper">
-                     <img src="images/portfolio/item-6.jpg" class="img-responsive" alt="" >
-                     <div class="overlay">
-                         <div class="buttons">
-                             <a rel="gallery" class="fancybox" href="images/portfolio/item-6.jpg">Demo</a>
-                             <a target="_blank" href="single-portfolio.html">Details</a>
-                         </div>
-                     </div>
-                 </div>
-                 <figcaption>
-                 <h4>
-                 <a href="#">
-                     Caramel Bottle
-                 </a>
-                 </h4>
-                 <p>
-                     Lorem ipsum dolor.
-                 </p>
                  </figcaption>
              </figure>
          </div>
@@ -155,10 +95,10 @@ Portfolio Section Start
 <section id="feature">
    <div class="container">
        <div class="section-heading">
-           <h1 class="title wow fadeInDown" data-wow-delay=".3s">Offer From Me</h1>
-           <p class="wow fadeInDown" data-wow-delay=".5s">
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed,<br> quasi dolores numquam dolor vero ex, tempora commodi repellendus quod laborum.
-           </p>
+           <h1 class="title wow fadeInDown homepage-header" data-wow-delay=".3s">Whatever is impeding your progress, we can help</h1>
+           <h3 class="wow fadeInDown homepage-subtitle" data-wow-delay=".5s">
+             We specialize in helping resolve the issues—whether personal, academic or professional—that impede performance.
+           </h3>
        </div>
        <div class="row">
            <div class="col-md-4 col-lg-4 col-xs-12">
@@ -169,8 +109,9 @@ Portfolio Section Start
                        </div>
                    </div>
                    <div class="media-body">
-                       <h4 class="media-heading">Media heading</h4>
-                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sint.</p>
+                       <h4 class="media-heading">Individuals and Families</h4>
+                       <p>We assist individuals ranging from teenagers through
+                         octogenarians and families of all sizes.</p>
                    </div>
                </div>
            </div>
@@ -182,8 +123,9 @@ Portfolio Section Start
                        </div>
                    </div>
                    <div class="media-body">
-                       <h4 class="media-heading">Well documented.</h4>
-                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sint.</p>
+                       <h4 class="media-heading">For-Profit or Nonprofit</h4>
+                       <p>We specialize in helping resolve the issues—whether personal,
+                         academic or professional—that impede performance.</p>
                    </div>
                </div>
            </div>
@@ -195,47 +137,10 @@ Portfolio Section Start
                        </div>
                    </div>
                    <div class="media-body">
-                       <h4 class="media-heading">Well documented.</h4>
-                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sint.</p>
-                   </div>
-               </div>
-           </div>
-           <div class="col-md-4 col-lg-4 col-xs-12">
-               <div class="media wow fadeInDown animated" data-wow-duration="500ms" data-wow-delay="1200ms">
-                   <div class="media-left">
-                       <div class="icon">
-                           <i class="ion-ios-americanfootball-outline"></i>
-                       </div>
-                   </div>
-                   <div class="media-body">
-                       <h4 class="media-heading">Free updates</h4>
-                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sint.</p>
-                   </div>
-               </div>
-           </div>
-           <div class="col-md-4 col-lg-4 col-xs-12">
-               <div class="media wow fadeInDown animated" data-wow-duration="500ms" data-wow-delay="1500ms">
-                   <div class="media-left">
-                       <div class="icon">
-                           <i class="ion-ios-keypad-outline"></i>
-                       </div>
-                   </div>
-                   <div class="media-body">
-                       <h4 class="media-heading">Solid Support</h4>
-                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sint.</p>
-                   </div>
-               </div>
-           </div>
-           <div class="col-md-4 col-lg-4 col-xs-12">
-               <div class="media wow fadeInDown animated" data-wow-duration="500ms" data-wow-delay="1800ms">
-                   <div class="media-left">
-                       <div class="icon">
-                           <i class="ion-ios-barcode-outline"></i>
-                       </div>
-                   </div>
-                   <div class="media-body">
-                       <h4 class="media-heading">Simple Installation</h4>
-                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, sint.</p>
+                       <h4 class="media-heading">Organizations of All Sizes</h4>
+                       <p>We can help any size organization, from early-stage
+                        start-ups to mature organizations with revenues in the hundreds
+                       of millions of dollars.</p>
                    </div>
                </div>
            </div>
@@ -252,9 +157,9 @@ Call To Action Section Start
        <div class="row">
            <div class="col-md-12">
                <div class="block">
-                   <h2 class="title wow fadeInDown" data-wow-delay=".3s" data-wow-duration="500ms">SO WHAT YOU THINK ?</h1>
-                   <p class="wow fadeInDown" data-wow-delay=".5s" data-wow-duration="500ms">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis,<br>possimus commodi, fugiat magnam temporibus vero magni recusandae? Dolore, maxime praesentium.</p>
-                   <a href="contact.html" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s" data-wow-duration="500ms">Contact With Me</a>
+                   <h2 class="title wow fadeInDown" data-wow-delay=".3s" data-wow-duration="500ms">Let Us Help You Achieve Your Goals</h1>
+                   <p class="wow fadeInDown" data-wow-delay=".5s" data-wow-duration="500ms">Contact us for a consultation.</p>
+                   <a href="contact.html" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s" data-wow-duration="500ms">Contact Us</a>
                </div>
            </div>
 
