added contact and about pages

--- a/app/views/refinery/blog/posts/_comment.html.erb
+++ b/app/views/refinery/blog/posts/_comment.html.erb
@@ -1,10 +1,20 @@
-<article class='blog_comment_message' id='<%= "comment-#{comment.to_param}" %>'>
-  <%= image_tag avatar_url(comment.email), :alt => comment.name, :class => 'avatar' %>
-  <%= simple_format auto_link(comment.message.to_s) %>
-  <footer class='blog_comment_author'>
-    <p>
-      <%= t('by', :scope => 'refinery.blog.posts.comments', :who => comment.name) %>,
-      <%= t('time_ago', :scope => 'refinery.blog.posts.comments', :time => time_ago_in_words(comment.created_at)) %>
-    </p>
-  </footer>
-</article>
+<div class="row">
+  <div class="col-md-12">
+    <div class="comments">
+      <div class="media">
+        <div class="media-body">
+          <article class='blog_comment_message' id='<%= "comment-#{comment.to_param}" %>'>
+            <!-- <%= image_tag avatar_url(comment.email), :alt => comment.name, :class => 'avatar' %> -->
+            <%= simple_format auto_link(comment.message.to_s) %>
+          </div>
+            <footer class='blog_comment_author text-muted'>
+                <h4 class="media-heading"><%= t('by', :scope => 'refinery.blog.posts.comments', :who => comment.name) %></h4>
+                <p>
+                <%= t('time_ago', :scope => 'refinery.blog.posts.comments', :time => time_ago_in_words(comment.created_at)) %>
+              </p>
+            </footer>
+          </article>
+      </div>
+    </div>
+  </div>
+</div>
