--- a/app/views/refinery/pages/contact.html.erb
+++ b/app/views/refinery/pages/contact.html.erb
@@ -14,35 +14,29 @@
     <div class="row">
       <div class="col-md-6">
         <div class="block">
-          <h2 class="subtitle wow fadeInDown" data-wow-duration="500ms" data-wow-delay=".3s">Send Us A Message</h2>
+          <h2 class="subtitle wow fadeInDown" data-wow-duration="500ms" data-wow-delay=".3s">Get In Touch with Us</h2>
             <p class="subtitle-des wow fadeInDown" data-wow-duration="500ms" data-wow-delay=".5s">
                     <%= raw(@page.content_for(:body)) %>
                 </p>
-                <div class="contact-form">
-                  <form id="contact-form" method="post" action="sendmail.php" role="form">
-
-                        <div class="form-group wow fadeInDown" data-wow-duration="500ms" data-wow-delay=".6s">
-                            <input type="text" placeholder="Your Name" class="form-control" name="name" id="name">
+                <div class="row address-details">
+                    <div class="col-md-4">
+                        <div class="address wow fadeInLeft" data-wow-duration="500ms" data-wow-delay=".5s">
+                            <i class="ion-ios-location-outline"></i>
+                            <p>123 Main St. Skokie, IL 60076</p>
                         </div>
-
-                        <div class="form-group wow fadeInDown" data-wow-duration="500ms" data-wow-delay=".8s">
-                            <input type="email" placeholder="Your Email" class="form-control" name="email" id="email" >
+                    </div>
+                    <div class="col-md-4">
+                        <div class="email wow fadeInLeft" data-wow-duration="500ms" data-wow-delay=".7s">
+                            <i class="ion-ios-email-outline"></i>
+                            <p><a href="mailto:paul.pinkus@sharingwisdominc.com">Email Us</a></p>
                         </div>
-
-                        <div class="form-group wow fadeInDown" data-wow-duration="500ms" data-wow-delay="1s">
-                            <input type="text" placeholder="Subject" class="form-control" name="subject" id="subject">
-                        </div>
-
-                        <div class="form-group wow fadeInDown" data-wow-duration="500ms" data-wow-delay="1.2s">
-                            <textarea rows="6" placeholder="Message" class="form-control" name="message" id="message"></textarea>
-                        </div>
-
-
-                        <div id="submit" class="wow fadeInDown" data-wow-duration="500ms" data-wow-delay="1.4s">
-                            <input type="submit" id="contact-submit" class="btn btn-default btn-send" value="Send Message">
-                        </div>
-
-                    </form>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="phone wow fadeInLeft" data-wow-duration="500ms" data-wow-delay=".9s">
+                            <i class="ion-ios-telephone-outline"></i>
+                            <p><a href="tel:312-310-1029">(312) 310-1029</a></p>
+                      </div>
+                  </div>
                 </div>
             </div>
         </div>
@@ -57,32 +51,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row address-details">
-        <div class="col-md-3">
-            <div class="address wow fadeInLeft" data-wow-duration="500ms" data-wow-delay=".3s">
-                <i class="ion-ios-location-outline"></i>
-                <h5>125 , Kings Street,Melbourne <br>United Kingdom,600562</h5>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="address wow fadeInLeft" data-wow-duration="500ms" data-wow-delay=".5s">
-                <i class="ion-ios-location-outline"></i>
-                <h5>125 , Kings Street,Melbourne <br>United Kingdom,600562</h5>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="email wow fadeInLeft" data-wow-duration="500ms" data-wow-delay=".7s">
-                <i class="ion-ios-email-outline"></i>
-                <p>support@themefisher.com<br>support@themefisher.com</p>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="phone wow fadeInLeft" data-wow-duration="500ms" data-wow-delay=".9s">
-                <i class="ion-ios-telephone-outline"></i>
-                <p>+07 052 245 022<br>+07 999 999 999</p>
-          </div>
-      </div>
     </div>
   </div>
 </section>
