--- a/app/views/refinery/pages/about.html.erb
+++ b/app/views/refinery/pages/about.html.erb
@@ -17,16 +17,15 @@
       </div>
       <div class="col-md-6">
         <div class="block">
-          <h3 class="subtitle wow fadeInUp" data-wow-delay=".3s" data-wow-duration="500ms">Why We are Different</h3>
-          <p  class="wow fadeInUp" data-wow-delay=".7s" data-wow-duration="500ms">
-            <%= render '/refinery/content_page' %>
-          </p>
+            <%= raw @page.content_for(:main_headline) %>
+
+            <%= raw @page.content_for(:main_text) %>
         </div>
       </div>
     </div>
   </div>
 </section>
-<section class="about-feature clearfix">
+<!-- <section class="about-feature clearfix">
   <div class="container-fluid">
       <div class="row">
           <div class="block about-feature-1 wow fadeInDown" data-wow-duration="500ms" data-wow-delay=".3s">
@@ -55,19 +54,19 @@
           </div>
       </div>
   </div>
-</section>
+</section> -->
 <section id="team">
 <div class="container">
   <div class="row">
     <h2 class="subtitle text-center">Meet The Team</h2>
-      <div class="col-md-3">
+      <div class="col-md-6">
         <div class="team-member wow fadeInLeft" data-wow-duration="500ms" data-wow-delay=".3s">
           <div class="team-img">
             <img src="images/team/team-1.jpg" class="team-pic" alt="">
           </div>
-          <h3 class="team_name">Jonathon Andrew</h3>
-          <p class="team_designation">CEO, Project Manager</p>
-          <p class="team_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore </p>
+          <h3 class="team_name">Paul Pinkus</h3>
+          <p class="team_designation">Business Consultant</p>
+          <%= raw @page.content_for(:principal_one_text) %>
           <p class="social-icons">
               <a href="#" class="facebook" target="_blank"><i class="ion-social-facebook-outline"></i></a>
               <a href="#" target="_blank"><i class="ion-social-twitter-outline"></i></a>
@@ -76,46 +75,14 @@
           </p>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-6">
         <div class="team-member wow fadeInLeft" data-wow-duration="500ms" data-wow-delay=".5s">
           <div class="team-img">
               <img src="images/team/team-2.jpg" class="team-pic" alt="">
           </div>
-          <h3 class="team_name">Jesmin Martina</h3>
-          <p class="team_designation">CEO, Project Manager</p>
-          <p class="team_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore .</p>
-          <p class="social-icons">
-              <a href="#" class="facebook" target="_blank"><i class="ion-social-facebook-outline"></i></a>
-              <a href="#" target="_blank"><i class="ion-social-twitter-outline"></i></a>
-              <a href="#" target="_blank"><i class="ion-social-linkedin-outline"></i></a>
-              <a href="#" target="_blank"><i class="ion-social-googleplus-outline"></i></a>
-          </p>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="team-member wow fadeInLeft" data-wow-duration="500ms" data-wow-delay=".7s">
-          <div class="team-img">
-            <img src="images/team/team-3.jpg" class="team-pic" alt="">
-          </div>
-          <h3 class="team_name">Deu John</h3>
-          <p class="team_designation">CEO, Project Manager</p>
-          <p class="team_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore .</p>
-          <p class="social-icons">
-              <a href="#" class="facebook" target="_blank"><i class="ion-social-facebook-outline"></i></a>
-              <a href="#" target="_blank"><i class="ion-social-twitter-outline"></i></a>
-              <a href="#" target="_blank"><i class="ion-social-linkedin-outline"></i></a>
-              <a href="#" target="_blank"><i class="ion-social-googleplus-outline"></i></a>
-          </p>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="team-member wow fadeInLeft" data-wow-duration="500ms" data-wow-delay=".9s">
-          <div class="team-img">
-              <img src="images/team/team-4.jpg" class="team-pic" alt="">
-          </div>
-          <h3 class="team_name">Anderson Martin</h3>
-          <p class="team_designation">CEO, Project Manager</p>
-          <p class="team_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore .</p>
+          <h3 class="team_name">Kreindel Pinkus</h3>
+          <p class="team_designation">Educator</p>
+          <%= raw @page.content_for(:principal_two_text) %>
           <p class="social-icons">
               <a href="#" class="facebook" target="_blank"><i class="ion-social-facebook-outline"></i></a>
               <a href="#" target="_blank"><i class="ion-social-twitter-outline"></i></a>
