--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -13,9 +13,7 @@
            <!-- logo -->
            <div class="navbar-brand">
              <h1 id='logo'>
-               <div class="icon">
-                   <i class="ion-ios-lightbulb" style="color:#02BDD5;"><%= link_to Refinery::Core.site_name, refinery.root_path, class:"brand-name" %></i>
-               </div>
+                <%= link_to Refinery::Core.site_name, refinery.root_path, class:"brand-name" %>
              </h1>
            </div>
            <!-- /logo -->
