removed works section

--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -21,7 +21,7 @@
         </div>
     </div>
 </section><!--/#main-slider-->
-<section id="works" class="works">
+<!-- <section id="works" class="works">
   <div class="container">
      <div class="section-heading">
        <h1 class="title wow fadeInDown" data-wow-delay=".3s"><%= raw @page.content_for(:second_headline) %></h1>
@@ -87,7 +87,7 @@
          </div>
      </div>
   </div>
-</section> <!-- #works -->
+</section>  -->
 <!--
 ==================================================
 Portfolio Section Start
