--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,8 @@
                  <div class="col-md-12">
                      <div class="block">
                          <h2 class="title wow fadeInDown" data-wow-delay=".3s" data-wow-duration="500ms">Let Us Help You Achieve Your Goals</h1>
-                         <p class="wow fadeInDown" data-wow-delay=".5s" data-wow-duration="500ms">Contact us for a consultation.</p>
-                         <a href="contact.html" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s" data-wow-duration="500ms">Contact Us</a>
+                         <!-- <p class="wow fadeInDown" data-wow-delay=".5s" data-wow-duration="500ms">Contact us for a consultation.</p>
+                         <a href="contact.html" class="btn btn-default btn-contact wow fadeInDown" data-wow-delay=".7s" data-wow-duration="500ms">Contact Us</a> -->
                      </div>
                  </div>
 
