--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -14,7 +14,7 @@
                     <h2 class="wow fadeInUp animated" data-wow-delay=".6s" >
                       <%= raw @page.content_for(:first_headline_text) %>
                     </h2>
-                    <a class="btn-lines dark light wow fadeInUp animated smooth-scroll btn btn-default btn-green" data-wow-delay=".9s" href="#works" data-section="/contact" >Contact Us</a>
+                    <!-- <a class="btn-lines dark light wow fadeInUp animated smooth-scroll btn btn-default btn-green" data-wow-delay=".9s" href="#works" data-section="/contact" >Contact Us</a> -->
 
                 </div>
             </div>
